rollup changes from https://github.com/sparkjavateam/spark